# earthengine-community

./: .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  Merit_Hydro_Visualization.js  Merit_Visualization.js  README.md  ee_api_colab_setup.ipynb  imad_tutorial_pt1.ipynb  tutorial_pt_1.ipynb  ~
.github/: CONTRIBUTING.md
.travis/: require-changes.sh
app-creator/: README.md  app.example.yaml  deserializer.js  go.mod  go.sum  karma.conf.cjs  main.go  package-lock.json  package.json  rollup.config.js  script.js  style.css  webpack.config.js
dataset/: extract_l2a.py  gedi_rasterization.py
datasets/: Convert_SMAPL3_QA_EASEv2HDF5_GeoTiff_9km_AMPM.py  Convert_SMAPL4_EASEv2HDF5_GeoTiff.py  L2A_lookup.txt  SMAPL4sampleplot  convert_smap_l3.py  convert_smap_l4.py  gedi_extract_l2a.py  gedi_extract_l2b.py  gedi_extract_l4a.py  gedi_lib.py  gedi_rasterize_l2a.py  gedi_rasterize_l2b.py  gedi_rasterize_l4a.py  smap_anomaly_l3.py  smap_anomaly_l4.py  smap_convert_l3.py  smap_convert_l4.py  smap_lib.py  websitedescriptionNASAUSDA.docx
docs/: index.md
examples/: README.md
experimental/: README.md  ee_agent.py  ee_agent_test.py  ee_genie.ipynb  vertexai_and_ee_describe_image.ipynb
experimental/functionsmith/: README.md  agent.py  airports.csv  code_parser_test.py  ee_companion.ipynb  executor.py  executor_test.py  functionsmith.ipynb  functionsmith.py  llm.py  parser.py  parser_test.py  pyproject.toml  sample_session.txt
experimental/functionsmith/src/: agent.py  code_parser.py  executor.py
experimental/functionsmith/src/functionsmith/: agent.py  code_parser.py  executor.py  llm.py
experimental/functionsmith/tests/: code_parser_test.py  executor_test.py
(+2261 files in other folders)
